0513 live, footer 진행 중

--- a/1_웹개발기초/clone_page/movis.css
+++ b/1_웹개발기초/clone_page/movis.css
@@ -2,7 +2,7 @@ body,
 html {
   margin: 0;
   padding: 0;
-  background-color: grey;
+  background-color: #f7f7f7;
   box-sizing: border-box;
 }
 
@@ -112,10 +112,13 @@ nav i {
 
 .controls {
   display: flex;
-  position: absolute;
   align-items: center;
   gap: 30px;
-  left: 0;
+  color: white;
+}
+
+.main-controls {
+  position: absolute;
   bottom: 0;
 }
 
@@ -149,8 +152,27 @@ nav i {
   color: rgb(145, 145, 145);
 }
 
+.title {
+  text-align: center;
+}
+
+.title p {
+  margin: 0;
+}
+
+.title #title {
+  font-size: 48px;
+  font-weight: 800;
+}
+
+#red-title {
+  color: #cc1424;
+}
+
 /* news */
 .news-section {
+  position: relative;
+  z-index: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -179,8 +201,227 @@ nav i {
 }
 
 .news-controls {
-  display: flex;
-  align-items: center;
+  z-index: 10;
   gap: 20px;
+}
+
+/* Media */
+.main-sec03 {
+  position: relative;
+  /* top: -35vh; */
+  margin-top: -35vh;
+  height: 85vh;
+
+  z-index: 0;
+  background-color: #1d40a3;
+}
+
+.media-section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10vw;
   color: white;
+}
+
+.media-function-area {
+  display: flex;
+  flex-direction: column;
+}
+
+.media-main {
+  margin-bottom: 60px;
+}
+
+#mobis-media {
+  color: #e8ddb9;
+}
+
+#mobis-live {
+  position: relative;
+  font-size: 50px;
+  font-weight: 900;
+  margin: 0px;
+  top: -20px;
+  margin-bottom: 36px;
+}
+
+.link {
+  text-decoration: none;
+  color: white;
+  width: 130px;
+  height: 21px;
+  padding: 11px 36px;
+  border: 1px solid white;
+  font-size: 14px;
+}
+
+.media {
+  display: none;
+}
+
+.media-wrap .active {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.media-text {
+  display: flex;
+  flex-direction: column;
+}
+
+.media-title {
+  color: #b3edfa;
+  font-size: 16px;
+}
+
+.media-detail {
+  font-size: 22px;
+}
+
+/* recruit */
+.recruit-section {
+}
+
+.inner-padding {
+  padding: 22vw;
+}
+
+.recruit-main-text {
+  display: flex;
+  flex-direction: column;
+  /* align-items: center; */
+  height: 400px;
+}
+
+.recruit-card-wrap {
+  display: flex;
+}
+
+/* ESG */
+.esg-text {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.esg-text p {
+  padding: 0;
+  margin: 0;
+}
+
+#esg-detail {
+  margin-top: 12px;
+}
+
+/* Invest */
+.invest-wrap {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.invest-wrap .title {
+  margin-bottom: 60px;
+}
+
+.stock-wrap {
+  position: relative;
+  display: flex;
+  width: 90vw;
+  justify-content: space-between;
+  gap: 15px;
+}
+
+.stock-live {
+  display: flex;
+  width: 60%;
+  /* display: flex; */
+  /* flex-direction: column; */
+  /* flex-direction: row; */
+  /* text-align: center; */
+}
+
+.invest-sec {
+  display: flex;
+  flex-direction: column;
+  width: 40%;
+  gap: 10px;
+}
+
+.stock-info {
+  /* display: flex;
+  flex-direction: column; */
+}
+
+#live {
+  /* display: flex; */
+  /* flex-direction: column; */
+  /* text-align: center; */
+}
+
+/* footer */
+footer {
+  display: flex;
+  background-color: #212121;
+  color: #a2a2a2;
+  height: 48vh;
+  align-items: center;
+  justify-content: center;
+}
+
+.footer-wrap {
+  display: flex;
+  flex-direction: column;
+  width: 98%;
+}
+
+.footer-top {
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer-bt {
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer-slogan {
+  color: white;
+  font-size: 40px;
+  font-weight: 900;
+}
+
+.footer-util {
+  display: flex;
+  flex-direction: column;
+  font-size: 20px;
+  gap: 10px;
+  padding: 0 20px;
+}
+
+.footer-util li {
+  list-style: none;
+}
+
+.footer-util a {
+  text-decoration: none;
+  color: #a2a2a2;
+}
+
+.footer-util li:nth-child(2) a {
+  color: white !important;
+}
+
+.footer-family-btn {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+.family-list {
+  display: none;
 }
