--- a/1_웹개발기초/clone_page/movis.css
+++ b/1_웹개발기초/clone_page/movis.css
@@ -207,13 +207,13 @@ nav i {
 
 /* Media */
 .main-sec03 {
+  display: flex;
   position: relative;
-  /* top: -35vh; */
   margin-top: -35vh;
   height: 85vh;
-
   z-index: 0;
   background-color: #1d40a3;
+  justify-content: center;
 }
 
 .media-section {
@@ -368,7 +368,7 @@ footer {
   display: flex;
   background-color: #212121;
   color: #a2a2a2;
-  height: 48vh;
+  height: 60vh;
   align-items: center;
   justify-content: center;
 }
@@ -376,7 +376,7 @@ footer {
 .footer-wrap {
   display: flex;
   flex-direction: column;
-  width: 98%;
+  width: 90%;
 }
 
 .footer-top {
@@ -416,12 +416,101 @@ footer {
   color: white !important;
 }
 
+.family-site {
+  position: relative;
+  width: 276px;
+}
+
+.family-site li {
+  list-style: none;
+  text-align: start;
+}
+
 .footer-family-btn {
   background-color: transparent;
   border: none;
   cursor: pointer;
+  color: rgb(107, 107, 107);
+  border: 1px solid rgb(107, 107, 107);
+  font-size: 14px;
+  padding: 0 20px;
+  width: 100%;
+  height: 50px;
+  box-sizing: border-box;
+  text-align: start;
 }
 
 .family-list {
+  box-sizing: border-box;
+  position: absolute;
   display: none;
+  overflow-y: auto;
+  width: 100%;
+  max-height: 0;
+  padding: 0px 16px;
+  transition: max-height 0.4s ease;
+}
+
+.family-list > li {
+  border-bottom: 1px solid rgb(107, 107, 107);
+  padding-top: 40px;
+  padding-bottom: 24px;
+}
+
+.family-list ul {
+  padding-left: 0;
+}
+
+.family-list.active {
+  margin: 0;
+  display: block;
+  max-height: 300px;
+  border: 1px solid rgb(107, 107, 107);
+  max-width: 100%;
+}
+
+.family-list a {
+  text-decoration: none;
+  color: rgb(107, 107, 107);
+}
+
+.copyright {
+  font-size: 14px;
+}
+
+.footer-cs {
+  display: flex;
+  position: relative;
+  justify-content: space-around;
+}
+
+.footer-cs p {
+  position: absolute;
+  margin-top: -100px;
+  color: white;
+  font-size: 18px;
+  min-width: 300px;
+}
+
+.footer-mark a {
+  margin-top: -40px;
+  display: flex;
+  flex-direction: column;
+  text-decoration: none;
+  color: #a2a2a2;
+  text-align: center;
+}
+
+.footer-mark span {
+  font-size: 10px;
+  display: inline-block;
+}
+
+.footer-mark img {
+  height: 45px;
+  margin: 0px 10px 10px 10px;
+}
+
+.footer-mark br {
+  line-height: 0;
 }
